# CMP9767M-submission

./: README.md
launch/: thorvald.launch  topo_nav.launch  topological_navigation.launch
notebooks/: opencv_segmentation_explorer.ipynb
state_machine/: ActionClientClass.py  actionClientClass.py  state_machine.py
thorvald_2dnav/: CMakeLists.txt  add_current_pose_to_topo_map.py  edit_topo_map.py  generate_topo_map.py  package.xml  thorvald_rviz_config.rviz  translationMove.py  translation_move.py
thorvald_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml
thorvald_2dnav/maps/: empty_map.yaml  generated_example.yaml  topological_map.yaml
vision/: image_saver.py  vision_node.py
