<?xml version="1.0"?>
<package format="2">
  <name>thorvald_2dnav</name>
  <version>0.0.0</version>
  <description>The thorvald_2dnav package</description>
  <maintainer email="wfmrohde@gmail.com">Will</maintainer>>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!--dependencies --> 
  <!--catkin --> 
  <buildtool_depend>catkin</buildtool_depend>
  <!--rospy --> 
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <!--std_msgs --> 
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <!--geometry_msgs --> 
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!--std_srvs --> 
  <build_depend>std_srvs</build_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>std_srvs</exec_depend>
  <!--move_base -->
  <build_depend>move_base</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <!-- my_odom_configuration_dep -->
  <build_depend>my_odom_configuration_dep</build_depend>
  <build_export_depend>my_odom_configuration_dep</build_export_depend>
  <exec_depend>my_odom_configuration_dep</exec_depend>
  <!--my_sensor_configuration_dep  -->
  <build_depend>my_sensor_configuration_dep</build_depend>
  <build_export_depend>my_sensor_configuration_dep</build_export_depend>
  <exec_depend>my_sensor_configuration_dep</exec_depend>
  <!--my_tf_configuration_dep<  -->
  <build_depend>my_tf_configuration_dep</build_depend>
  <build_export_depend>my_tf_configuration_dep</build_export_depend>
  <exec_depend>my_tf_configuration_dep</exec_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
